--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,8 @@ spring:
       - id: beer-order-service
         uri: http://localhost:8081
         predicates:
-        - Path=/api/v1/customers,/api/v1/customers/*/orders
+        - Path=/api/v1/customers,/api/v1/customers/*/orders,/api/v1/customers/*/orders/*
+      - id: beer-inventory-service
+        uri: http://localhost:8082
+        predicates:
+          - Path=/api/v1/beer/*/inventory
