--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
   application:
     name: sfg-brewery-gateway
 
+  zipkin:
+    base-url: http://localhost:9411/
+
   cloud:
 
     # Debug routes
